# rmail

./: .gitignore  Cargo.toml  README.md  config.example.toml
.kiro/steering/: product.md  structure.md  tech.md
src/: config.rs  lib.rs  mail_receiver.rs
