[package]
name = "rmail"
version = "0.1.0"
edition = "2024"

[dependencies]
async-imap = "0.11"
async-native-tls = "0.5"
futures = "0.3"
mail-parser = "0.11"
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
